# fastapi-jwt-microservices

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
auth/: .auth-env  Dockerfile  alembic.ini  main.py
auth/alembic/: env.py
auth/alembic/versions/: d11bc0002de2_init.py
auth/api/: __init__.py  auth.py
auth/core/: config.py
auth/crud/: refresh_session_crud.py
auth/db/: db_helper.py
auth/models/: __init__.py  refresh_session.py
auth/schemas/: jwt_token.py  user.py
auth/services/: token.py
